k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: infra-demo-svc
  namespace: default
spec:
  selector:
    app: infra-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
