k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-demo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: infra-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-demo-svc
                port:
                  number: 80
